# Cifar10_CPP

./: .gitignore  CMakeLists.txt  README.md  results.txt  test.py  test2.ipynb
Operators/include/: BatchNormalization_1d.h  Conv2D.h  dense.h  maxpooling.h
Operators/src/: BatchNormalization_1d.cpp  Conv2D.cpp  dense.cpp  maxpooling.cpp
Test_Operators/include/: unit_test.h
Test_Operators/src/: unit_test.cpp
configs/: config_file.json
data/cpp_outputs/: batch_normalization.txt  batch_normalization_1.txt  batch_normalization_2.txt  batch_normalization_3.txt  conv2d.txt  conv2d_1.txt  conv2d_2.txt  dense.txt  dense_1.txt  max_pooling2d.txt  max_pooling2d_1.txt
data/python_outputs/: batch_normalization_1_output.txt  batch_normalization_2_output.txt  batch_normalization_3_output.txt  batch_normalization_output.txt  conv2d_1_output.txt  conv2d_2_output.txt  conv2d_output.txt  dense_1_output.txt  dense_output.txt  max_pooling2d_output.txt
data/reference/: activation_1_attributes.json  activation_2_attributes.json  activation_3_attributes.json  activation_attributes.json  batch_normalization_1_attributes.json  batch_normalization_2_attributes.json  batch_normalization_3_attributes.json  batch_normalization_attributes.json  conv2d_1_attributes.json  conv2d_2_attributes.json  conv2d_attributes.json  dense_1_attributes.json  dense_attributes.json  dropout_1_attributes.json  dropout_2_attributes.json  dropout_3_attributes.json  dropout_attributes.json  flatten_attributes.json  max_pooling2d_1_attributes.json  max_pooling2d_attributes.json
include/: test2.ipynb
report/: model_prediction_output.txt  unit_test_check.txt
src/: main.cpp  test.py  test2.ipynb
utilities/include/: utils.h
utilities/src/: test.cpp  utils.cpp
